k8s/service.yaml
apiVersion: v1  # Service для API (ClusterIP = доступен только внутри кластера)
kind: Service
metadata:
  name: telecom-api
spec:
  selector:
    app: telecom-api            # какие поды выбирать (по лейблу)
  ports:
  - port: 80                # порт Service'а (внутри K8s)
    targetPort: 8000              # порт пода (внутри контейнера)
  type: ClusterIP               # тип: доступен только внутри кластера
---
apiVersion: v1     # Service для PostgreSQL
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
---
apiVersion: v1      # Service для Redis
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
